# Project-Fastapi

./: README.md  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/products/: crud.py  depedencies.py  schemas.py  views.py
core/: config.py
shop-app/: pyproject.toml
users/: crud.py  schemas.py  views.py
