[project]
name = "microschop"
version = "0.1.0"
description = ""
authors = [
    {name = "user",email = "to1990to.o@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standart] (>=0.48.0,<0.49.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
